arreglada la ruta del nav

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="navbar-main">
-        <a class="display-4" href="../proyectocoder/index.html">Los Cuatro Alamos</a>
+        <a class="display-4" href="index.html">Los Cuatro Alamos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
         </button>
@@ -105,7 +105,7 @@
                 <i class="fa-sharp fa-solid fa-truck fa-xl fs-2"></i>
                 </div>
                 <h5 class="text-dark display-6">Envios gratis a todo el país</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, fugit!</p>
+                <p>Gracias nuestras sucursales en todas las provincias</p>
               </div>
             </div>
             <div class="tradition-card text-center">
@@ -114,7 +114,7 @@
                   <i class="fa-sharp fa-solid fa-kitchen-set fa-xl fs-2"></i>
                 </div>
                 <h5 class="text-dark display-6">Productos hechos con pasión por la cocina</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, fugit!</p>
+                <p>Y para disfrutar cada momento</p>
               </div>
             </div>
             <div class="tradition-card text-center">
@@ -123,7 +123,7 @@
                   <i class="fa-sharp fa-solid fa-fire-burner fa-lg fs-2"></i>
                 </div>
                 <h5 class="text-dark display-6">Deliciosas recetas</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, fugit!</p>
+                <p>Compartidas en nuestro <a class="text-dark" href="pages/newsletter.html">Newsletter</a></p>
               </div>
             </div>
         </section>
