añadidos extends, terminada la pagina de newsletter

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="navbar-main">
-        <a class="display-4" href="../index.html">Los Cuatro Alamos</a>
+        <a class="display-4" href="#">Los Cuatro Alamos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
         </button>
@@ -36,7 +36,7 @@
     <main>
         <section class="bg-intro">
             <div class="bg-intro-content container">
-              <h1 class="display-1">Los Cuatro Alamos</h1>
+              <h1>Los Cuatro Alamos</h1>
               <p>Panadería familiar</p>
             </div>
         </section>
@@ -48,7 +48,7 @@
         <section class="container-fluid">
           <div class="container-fluid sales-index">
             <div class="card product-card">
-              <img class="card-img-top pb-3" src="imgs/products-pngs/product-1.png" alt="Card image cap">
+              <img class="card-img-top pb-3" src="imgs/products-pngs/product-1.png" alt="mix de Dulzura">
               <div class="card-body">
                 <div>
                   <h5 class="card-title fs-3">Mix de Dulzura</h5>
@@ -59,7 +59,7 @@
               </div>
             </div>
             <div class="card product-card">
-              <img class="card-img-top pb-3" src="imgs/products-pngs/product-2.png" alt="Card image cap">
+              <img class="card-img-top pb-3" src="imgs/products-pngs/product-2.png" alt="Cheesecake Festivo">
               <div class="card-body">
                 <div>
                   <h5 class="card-title fs-3">Cheesecake Festivo</h5>
@@ -70,7 +70,7 @@
               </div>
             </div>
             <div class="card product-card">
-              <img class="card-img-top pb-3" src="imgs/products-pngs/product-3.png" alt="Card image cap">
+              <img class="card-img-top pb-3" src="imgs/products-pngs/product-3.png" alt="Cheesecake Tradicional">
               <div class="card-body">
                 <div>
                   <h5 class="card-title fs-3">Cheesecake Tradicional</h5>
@@ -81,7 +81,7 @@
               </div>
             </div>
             <div class="card product-card">
-              <img class="card-img-top pb-3" src="imgs/products-pngs/product-4.png" alt="Card image cap">
+              <img class="card-img-top pb-3" src="imgs/products-pngs/product-4.png" alt="arte en Cupcake">
               <div class="card-body">
                 <div>
                   <h5 class="card-title fs-3">Arte en Cupcake</h5>
@@ -136,7 +136,7 @@
           <div class="box-contact-index">
             <h5 class="text-white text-center fs-1">¿Tenés alguna pregunta?</h5>
             <div class="centerflex">
-              <button class="p-2" type="button"><a class="text-black" href="../proyectocoder/pages/contacto.html">Contactanos hoy</a></button>
+              <button class="secondary-btn p-3" type="button"><a href="pages/contacto.html">Contactanos hoy</a></button>
             </div>
           </div>
         </section>
