--- a/pages/productos.html
+++ b/pages/productos.html
@@ -47,7 +47,7 @@
         <div class="mb-3">
           <div class="column-products d-flex gap-5 justify-content-center align-items-center">
             <div class="product-container">
-              <img src="../imgs/products-pngs/product-1.png" alt="" srcset="">
+              <img src="../imgs/products-pngs/product-1.png" alt="Mix Regional">
             </div>
             <div class="x-transition text-products-container">
               <h2 class="text-dark">Mix Regional</h3>
@@ -73,7 +73,7 @@
               </div>
             </div>
             <div class="product-container-alt ">
-              <img src="../imgs/products-pngs/product-2.png" alt="" srcset="">
+              <img src="../imgs/products-pngs/product-2.png" alt="Cheesecake Festivo">
             </div>
           </div>
         </div>
@@ -81,7 +81,7 @@
         <div class="mb-3">
           <div class="column-products d-flex gap-5 justify-content-center align-items-center">
             <div class="product-container">
-              <img src="../imgs/products-pngs/product-3.png" alt="" srcset="">
+              <img src="../imgs/products-pngs/product-3.png" alt="Cheesecake Tradicional">
             </div>
             <div class="x-transition text-products-container">
               <h2 class="text-dark">Cheesecake Tradicional</h3>
@@ -107,7 +107,7 @@
               </div>
             </div>
             <div class="product-container-alt ">
-              <img src="../imgs/products-pngs/product-4.png" alt="" srcset="">
+              <img src="../imgs/products-pngs/product-4.png" alt="Arte en Cupcake">
             </div>
           </div>
         </div>
