--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -1,67 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="pan, panadería, panaderiaargentina, panaderos"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos | Cuatro Alamos</title>
-    <link rel="shortcut icon" href="../imgs/favicon.png" type="image/x-icon">
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/1eac27419e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/styles.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="keywords" content="pan, panadería, panaderiaargentina, panaderos"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Newsletter | Cuatro Alamos</title>
+        <link rel="shortcut icon" href="../imgs/favicon.png" type="image/x-icon">
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/1eac27419e.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    </head>
 </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="navbar-main">
-          <a class="display-4" href="../index.html">Los Cuatro Alamos</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
-          </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <ul class="navbar-nav navbar-links">
-                <li><a class="nav-item link-nav display-6" href="../pages/productos.html">Productos</a></li>
-                <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
-                <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
-                <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
-            </ul>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="navbar-main">
+      <a class="display-4" href="../index.html">Los Cuatro Alamos</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
+      </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <ul class="navbar-nav navbar-links">
+            <li><a class="nav-item link-nav display-6" href="../pages/productos.html">Productos</a></li>
+            <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
+            <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
+            <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
+        </ul>
+    </div>
+  </div>
+  </nav>
+</header>
+<body>
+  <main class="content-wrap">
+    <section class="cover-newsletter">
+      <div class="container">
+        <div class="newsletter-menu">
+          <h1 class="text-dark text-center">Suscríbete a nuestro boletín</h1>
+          <p class="text-center">Recibe notificaciones de nuevas recetas o nuevos productos.</p>
+          <form class="newsletter-input">
+            <div class="form-group">
+              <input type="email" class="form-control" placeholder="Tu Email">
+            </div>
+            <div class="centerflex mt-3">
+              <button type="submit" class="secondary-btn">Suscribirme</button>
+            </div>
+          </form>
         </div>
       </div>
-      </nav>
-    </header>
-    <main class="content-wrap">
-      <section class="cover-newsletter">
-        <div>
-          <h1 class="text-dark text-center">Nuestro Newsletter</h1>
-        </div>
-      </section>
-      <section>
-        <div class="container newsletter-box flex-column vh-100">
-          <div class="newsletter-menu">
-            <div class="d-flex flex-column">
-              <h2 class="text-dark mt-5 display-2">Suscríbete a nuestro boletín</h2>
-              <p class="text-dark mb-3 fw-bolder">Recibe notificaciones de nuevas recetas y nuevos productos.</p>
-              <form>
-                <div class="form-group d-flex flex-column">
-                  <label for="email">Email</label>
-                  <div class="d-flex gap-2">
-                    <input type="email" class="form-control w-50" id="email" placeholder="Ingresa tu email" required>            
-                    <button type="submit" class="main-btn p-3">Suscribirme</button>
-                  </div>
-                </div>
-              </form>
-            </div>
-            <img class="newsletter-custom" src="../imgs/newsletter-deco.jpg" alt="" srcset="">
-          </div>
-          </div>
-        </div>
-      </section>
-    </main>
-  </body>
+    </section>
+    
+  </main>
   <footer class="footer text-white">
     <div class="container-fluid">
       <div class="row">
@@ -83,6 +74,5 @@
     </div>
     <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
   </footer>
-</html>
 </body>
 </html>
