añadido footerLinks.js y descuentos.js

--- a/index.html
+++ b/index.html
@@ -47,50 +47,8 @@
         </section>
         <section class="container-fluid">
           <div class="container-fluid sales-index">
-            <div class="card product-card">
-              <img class="card-img-top pb-3" src="imgs/products-pngs/product-1.png" alt="mix de Dulzura">
-              <div class="card-body">
-                <div>
-                  <h5 class="card-title fs-3">Mix de Dulzura</h5>
-                  <p class="card-text text-dark fs-5">Pastafrola, medialunas y más (1 docena)</p>
-                  <span class="text-dark">$350</span>
-                </div>
-                <button class="main-btn"><a href="pages/productos.html">Ir a Productos</a></button>
-              </div>
-            </div>
-            <div class="card product-card">
-              <img class="card-img-top pb-3" src="imgs/products-pngs/product-2.png" alt="Cheesecake Festivo">
-              <div class="card-body">
-                <div>
-                  <h5 class="card-title fs-3">Cheesecake Festivo</h5>
-                  <p class="card-text text-dark fs-5">Cheesecake bañado en chocolate y frutillas</p>
-                  <span class="text-dark">$350</span>
-                </div>
-                <button class="main-btn"><a href="pages/productos.html">Ir a Productos</a></button>
-              </div>
-            </div>
-            <div class="card product-card">
-              <img class="card-img-top pb-3" src="imgs/products-pngs/product-3.png" alt="Cheesecake Tradicional">
-              <div class="card-body">
-                <div>
-                  <h5 class="card-title fs-3">Cheesecake Tradicional</h5>
-                  <p class="card-text text-dark fs-5">Cheesecake con frutillas y pasta de maní</p>
-                  <span class="text-dark">$350</span>
-                </div>
-                <button class="main-btn"><a href="pages/productos.html">Ir a Productos</a></button>
-              </div>
-            </div>
-            <div class="card product-card">
-              <img class="card-img-top pb-3" src="imgs/products-pngs/product-4.png" alt="arte en Cupcake">
-              <div class="card-body">
-                <div>
-                  <h5 class="card-title fs-3">Arte en Cupcake</h5>
-                  <p class="card-text text-dark fs-5">Cupcake de chocolate bañado en crema y frutillas (1 docena)</p>
-                  <span class="text-dark">$350</span>
-                </div>
-                <button class="main-btn"><a href="pages/productos.html">Ir a Productos</a></button>
-              </div>
-            </div>
+            <!-- tarjetas añadidas con js en js/almacenProductos.js -->
+          </div>
         </section>
         <section class="title-cover">
           <div class="div-line">
@@ -152,15 +110,15 @@
           <div class="col-md-6">
             <h5 class="display-5">Enlaces</h5>
             <ul class="list-unstyled">
-              <li><a class="nav-item link-nav" href="../pages/productos.html">Productos</a></li>
-              <li><a class="nav-item link-nav" href="../pages/empleados.html">Empleados</a></li>
-              <li><a class="nav-item link-nav" href="../pages/newsletter.html">Newsletter</a></li>
-              <li><a class="nav-item link-nav" href="../pages/contacto.html">Contactos</a></li>
+              <!-- links añadidos con .map en js/footerlinks -->
             </ul>
           </div>
         </div>
       </div>
       <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
     </footer>
+    <script src="js/almacenProductos.js"></script>
+    <script src="js/descuentos.js"></script>
+    <script src="js/footerLinks.js"></script>
 </body>
 </html>
