--- a/pages/empleados.html
+++ b/pages/empleados.html
@@ -89,15 +89,13 @@
             <div class="col-md-6">
               <h5 class="display-5">Enlaces</h5>
               <ul class="list-unstyled">
-                <li><a class="nav-item link-nav" href="../pages/productos.html">Productos</a></li>
-                <li><a class="nav-item link-nav" href="../pages/empleados.html">Empleados</a></li>
-                <li><a class="nav-item link-nav" href="../pages/newsletter.html">Newsletter</a></li>
-                <li><a class="nav-item link-nav" href="../pages/contacto.html">Contactos</a></li>
+                <!-- links añadidos con .map en js/footerlinks -->
               </ul>
             </div>
           </div>
         </div>
         <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
       </footer>
+      <script src="js/footerLinks.js"></script>
 </body>
 </html>
