--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
           <div class="col-md-6">
             <h5 class="display-5">Enlaces</h5>
             <ul class="list-unstyled">
-              <li><a class="nav-item link-nav" href="../pages/productos.html">Productos</a></li>
-              <li><a class="nav-item link-nav" href="../pages/empleados.html">Empleados</a></li>
-              <li><a class="nav-item link-nav" href="../pages/newsletter.html">Newsletter</a></li>
-              <li><a class="nav-item link-nav" href="../pages/contacto.html">Contactos</a></li>
+              <li><a class="nav-item link-nav" href="/pages/productos.html">Productos</a></li>
+              <li><a class="nav-item link-nav" href="/pages/empleados.html">Empleados</a></li>
+              <li><a class="nav-item link-nav" href="/pages/newsletter.html">Newsletter</a></li>
+              <li><a class="nav-item link-nav" href="/pages/contacto.html">Contactos</a></li>
             </ul>
           </div>
         </div>
