fix al footer del index

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
           <div class="col-md-6">
             <h5 class="display-5">Enlaces</h5>
             <ul class="list-unstyled">
-              <li><a class="nav-item link-nav" href="/pages/productos.html">Productos</a></li>
-              <li><a class="nav-item link-nav" href="/pages/empleados.html">Empleados</a></li>
-              <li><a class="nav-item link-nav" href="/pages/newsletter.html">Newsletter</a></li>
-              <li><a class="nav-item link-nav" href="/pages/contacto.html">Contactos</a></li>
+              <li><a class="nav-item link-nav" href="pages/productos.html"</a></li>
+              <li><a class="nav-item link-nav" href="pages/empleados.html">Empleados</a></li>
+              <li><a class="nav-item link-nav" href="pages/newsletter.html">Newsletter</a></li>
+              <li><a class="nav-item link-nav" href="pages/contacto.html">Contactos</a></li>
             </ul>
           </div>
         </div>
@@ -122,6 +122,5 @@
     </footer>
     <script src="js/almacenProductos.js"></script>
     <script src="js/descuentos.js"></script>
-    <script src="js/footerLinks.js"></script>
 </body>
 </html>
