fix al link de los scripts en /pages

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -107,6 +107,6 @@
             </div>
             <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
           </footer>
-          <script src="js/footerLinks.js"></script>
+          <script src="../js/footerLinks.js"></script>
     </body>
 </html>
