fix al script de calculadora en el index

--- a/index.html
+++ b/index.html
@@ -122,5 +122,6 @@
     </footer>
     <script src="js/almacenProductos.js"></script>
     <script src="js/descuentos.js"></script>
+    <script src="js/calculadoraInteractiva.js"></script>
 </body>
 </html>
