añadido carrito de compras (/js/carroDeCompra)

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </div>
       <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
     </footer>
-    <script src="js/almacenProductos.js"></script>
+    <script src="js/publicarProductos.js"></script>
     <script src="js/descuentos.js"></script>
     <script src="js/calculadoraInteractiva.js"></script>
 </body>
