--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -28,6 +28,19 @@
             <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
             <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
             <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
+            <div class="dropdown">
+              <i class=" link-nav display-6 fas fa-shopping-cart fa-fade dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+              </i>
+              <ul class="dropdown-menu stay-open" aria-labelledby="dropdownMenuButton1">
+                <div class="d-flex flex-column gap-3 p-3">
+                  <h5 id="total" class="position-fixed text-dark">Total: 0.00</h5>
+                  <div id="carrito" class="mt-2 mb-2">
+                    <!-- Aquí se mostrarán los productos en el carrito -->
+                    
+                  </div>
+                </div>
+              </ul>
+            </div>
         </ul>
     </div>
   </div>
