--- a/pages/productos.html
+++ b/pages/productos.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/1eac27419e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/styles.css">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </head>
 <body>
   <header>
@@ -28,6 +29,20 @@
               <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
               <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
               <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
+              <li>
+              <div class="dropdown">
+                <i class=" link-nav display-6 fas fa-shopping-cart fa-fade dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                </i>
+                <ul class="dropdown-menu stay-open" aria-labelledby="dropdownMenuButton1">
+                  <div class="d-flex flex-column gap-3 p-3">
+                    <h5 id="total" class="position-fixed text-dark">Total: 0.00</h5>
+                    <div id="carrito" class="mt-2 mb-2">
+                      <!-- Aquí se mostrarán los productos en el carrito -->
+                      
+                    </div>
+                  </div>
+                </ul>
+              </div>
           </ul>
       </div>
     </div>
@@ -43,74 +58,10 @@
       </section>
       <section class="product-showcase mb-5">
         <h2 class="display-5 text-center text-dark mb-5 opacity-0-100">Sin conservantes • Envios gratis • Para compartir cuando quieras</h2>
-        <!-- producto 1 -->
-        <div class="mb-3">
-          <div class="column-products d-flex gap-5 justify-content-center align-items-center">
-            <div class="product-container">
-              <img src="../imgs/products-pngs/product-1.png" alt="Mix Regional">
-            </div>
-            <div class="x-transition text-products-container">
-              <h2 class="text-dark">Mix Regional</h3>
-              <p class="fs-6">• Sabores de la patagonia</p>
-              <p class="fs-6">• Recetas regionales</p>
-              <p class="fs-6">• Mix totalmente Argentino</p>
-              <div class="mb-5">
-                <button class="main-btn" type="button"><a href="#">Añadir al Carrito</a></button>
-              </div>
-            </div>
-          </div>
+        <div id="product">
+          <!-- productos añadidos en js/productos -->
         </div>
-        <!-- producto 2 -->
-        <div class="mb-3">
-          <div class="column-products-alt d-flex gap-5 justify-content-center align-items-center">
-            <div class="x-transitionNegative text-products-container">
-              <h2 class="text-dark">Cheesecake Festivo</h3>
-                <p class="fs-6">• Ideal para reuniones empresariales</p>
-                <p class="fs-6">• Té con amigas</p>
-                <p class="fs-6">• Elaborado con los mejores productos</p>
-              <div class="">
-                <button class="main-btn"  type="button"><a href="#">Añadir al Carrito</a></button>
-              </div>
-            </div>
-            <div class="product-container-alt ">
-              <img src="../imgs/products-pngs/product-2.png" alt="Cheesecake Festivo">
-            </div>
-          </div>
-        </div>
-        <!-- producto 3 -->
-        <div class="mb-3">
-          <div class="column-products d-flex gap-5 justify-content-center align-items-center">
-            <div class="product-container">
-              <img src="../imgs/products-pngs/product-3.png" alt="Cheesecake Tradicional">
-            </div>
-            <div class="x-transition text-products-container">
-              <h2 class="text-dark">Cheesecake Tradicional</h3>
-                <p class="fs-6">• Receta de la abuela</p>
-                <p class="fs-6">• Elaborado con la tradición que nos caracteriza</p>
-                <p class="fs-6">• Regala un toque de dulzura con el más exquisito sabor</p>
-              <div class="mb-5">
-                <button class="main-btn" type="button"><a href="#">Añadir al Carrito</a></button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- producto 4 -->
-        <div class="mb-3">
-          <div class="column-products-alt d-flex gap-5 justify-content-center align-items-center">
-            <div class="x-transitionNegative text-products-container">
-              <h2 class="text-dark">Arte en Cupcake</h3>
-                <p class="fs-6">• Diseños a pedido del cliente</p>
-                <p class="fs-6">• Realizado por nuestros mejores artistas en Cupcake</p>
-                <p class="fs-6">• Regala felicidad</p>
-              <div>
-                <button class="main-btn" type="button"><a href="#">Añadir al Carrito</a></button>
-              </div>
-            </div>
-            <div class="product-container-alt ">
-              <img src="../imgs/products-pngs/product-4.png" alt="Arte en Cupcake">
-            </div>
-          </div>
-        </div>
+
     </section>
     </main>
     <footer class="footer text-white">
@@ -132,5 +83,7 @@
       <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
     </footer>
     <script src="/js/footerLinks.js"></script>
+    <script src="/js/carroDeCompras.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
