añadidos scripts a los demas html

--- a/pages/empleados.html
+++ b/pages/empleados.html
@@ -110,5 +110,6 @@
         <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
       </footer>
       <script src="../js/footerLinks.js"></script>
+      <script src="/js/carroDeCompras.js"></script>
 </body>
 </html>
