fix a la ruta de carroDeCompras.js

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -82,8 +82,8 @@
       </div>
       <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
     </footer>
-    <script src="/js/footerLinks.js"></script>
-    <script src="/js/carroDeCompras.js"></script>
+    <script src="../js/footerLinks.js"></script>
+    <script src="../js/publicarProductos.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
