fix a la ruta de productos.html

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -83,7 +83,7 @@
       <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
     </footer>
     <script src="../js/footerLinks.js"></script>
-    <script src="../js/publicarProductos.js"></script>
+    <script src="../js/carroDeCompras.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
