añadidos modales tanto para empleados.html (js) y productos.html (sweetAlert)

--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -13,6 +13,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/1eac27419e.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="../css/styles.css">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     </head>
 </head>
 <header>
@@ -28,19 +29,6 @@
             <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
             <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
             <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
-            <div class="dropdown">
-              <i class=" link-nav display-6 fas fa-shopping-cart fa-fade dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-              </i>
-              <ul class="dropdown-menu stay-open" aria-labelledby="dropdownMenuButton1">
-                <div class="d-flex flex-column gap-3 p-3">
-                  <h5 id="total" class="position-fixed text-dark">Total: 0.00</h5>
-                  <div id="carrito" class="mt-2 mb-2">
-                    <!-- Aquí se mostrarán los productos en el carrito -->
-                    
-                  </div>
-                </div>
-              </ul>
-            </div>
         </ul>
     </div>
   </div>
@@ -84,7 +72,7 @@
     </div>
     <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
   </footer>
-  <script src="../js/footerLinks.js"></script>
+  <script src="../js/body.js"></script>
   <script src="/js/carroDeCompras.js"></script>
 </body>
 </html>
