--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/1eac27419e.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </head>
 <body>
   <header>
@@ -20,7 +21,7 @@
       <div class="navbar-main">
         <a class="display-4" href="#">Los Cuatro Alamos</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
+            <i class="fa-solid fa-bars fa-2x1" style="color: #ffffff;"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <ul class="navbar-nav navbar-links">
@@ -110,10 +111,7 @@
           <div class="col-md-6">
             <h5 class="display-5">Enlaces</h5>
             <ul class="list-unstyled">
-              <li><a class="nav-item link-nav" href="pages/productos.html">Productos</a></li>
-              <li><a class="nav-item link-nav" href="pages/empleados.html">Empleados</a></li>
-              <li><a class="nav-item link-nav" href="pages/newsletter.html">Newsletter</a></li>
-              <li><a class="nav-item link-nav" href="pages/contacto.html">Contactos</a></li>
+              <!-- se añaden los links en js/body.js -->
             </ul>
           </div>
         </div>
@@ -121,6 +119,7 @@
       <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
     </footer>
     <script src="js/publicarProductos.js"></script>
-    <script src="js/descuentos.js"></script>
+    <script src="js/body.js"></script>
+
 </body>
 </html>
