--- a/pages/empleados.html
+++ b/pages/empleados.html
@@ -13,6 +13,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/1eac27419e.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../css/styles.css">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     </head>
 <body>
     <header>
@@ -22,27 +23,14 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars fa-fade fa-2x1" style="color: #ffffff;"></i>
             </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <ul class="navbar-nav navbar-links">
-                  <li><a class="nav-item link-nav display-6" href="../pages/productos.html">Productos</a></li>
-                  <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
-                  <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
-                  <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
-                  <div class="dropdown">
-                    <i class=" link-nav display-6 fas fa-shopping-cart fa-fade dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                    </i>
-                    <ul class="dropdown-menu stay-open" aria-labelledby="dropdownMenuButton1">
-                      <div class="d-flex flex-column gap-3 p-3">
-                        <h5 id="total" class="position-fixed text-dark">Total: 0.00</h5>
-                        <div id="carrito" class="mt-2 mb-2">
-                          <!-- Aquí se mostrarán los productos en el carrito -->
-                          
-                        </div>
-                      </div>
-                    </ul>
-                  </div>
-              </ul>
-          </div>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <ul class="navbar-nav navbar-links">
+                    <li><a class="nav-item link-nav display-6" href="../pages/productos.html">Productos</a></li>
+                    <li><a class="nav-item link-nav display-6" href="../pages/empleados.html">Empleados</a></li>
+                    <li><a class="nav-item link-nav display-6" href="../pages/newsletter.html">Newsletter</a></li>
+                    <li><a class="nav-item link-nav display-6" href="../pages/contacto.html">Contactos</a></li>
+                </ul>
+            </div>
         </div>
         </nav>
     </header>
@@ -52,41 +40,52 @@
                 <h1>Unite a la mejor panadería de Argentina</h1>
             </div>
         </section>
-        <section class="miembros-section">
+        <section id="modal" class="modal">
+            <div class="modal_container">
+
+            </div>
+        </section>
+        <section class="miembros-section border">
             <h5 class="text-center text-dark">Nuestros lideres</h5>
             <div class="admins-section">
-                <div class="usercard hover-animation">
+                <div id="profile-1" class="usercard">
                     <img src="../imgs/founder1.jpg" alt="fundador1">
                     <h5 class="text-center">Gael Huertas</h5>
-                    <p class="text-center">Lider de marketing</p>
+                    <p class="text-center text-dark">Lider de marketing</p>
+                    <a href="#" class="btn-2 modal_key">Ver Perfil</a>
                 </div>
-                <div class="usercard hover-animation">
+                <div id="profile-2" class="usercard">
                     <img src="../imgs/founder2.jpg" alt="fundador2">
                     <h5 class="text-center">Julian Martos</h5>
                     <p class="text-center">Community Manager</p>
+                    <a href="#" class="btn-2 modal_key">Ver Perfil</a>
                 </div>
-                <div class="usercard hover-animation">
+                <div id="profile-3" class="usercard">
                     <img src="../imgs/founder3.jpg" alt="fundador3">
                     <h5 class="text-center">Dario Caro</h5>
                     <p class="text-center">Lider chef</p>
+                    <a href="#" class="btn-2 modal_key">Ver Perfil</a>
                 </div>
             </div>
             <h5 class="text-center text-dark">Nuestros Empleados</h5>
             <div class="employee-section">
-                <div class="usercard hover-animation">
+                <div id="profile-4" class="usercard">
                     <img src="../imgs/employee1.jpg" alt="empleado1">
                     <h5 class="text-center display-6">Lorena Martinez</h5>
                     <p class="text-center">Panadera Oficial</p>
+                    <a href="#" class="btn-2 modal_key">Ver Perfil</a>
                 </div>
-                <div class="usercard hover-animation">
+                <div id="profile-5" class="usercard">
                     <img src="../imgs/employee2.jpg" alt="empleado2">
                     <h5 class="text-center">Valeria Rodriguez</h5>
                     <p class="text-center">Panadera Oficial</p>
+                    <a href="#" class="btn-2 modal_key">Ver Perfil</a>
                 </div>
-                <div class="usercard hover-animation">
+                <div id="profile-6" class="usercard">
                     <img src="../imgs/employee3.jpg" alt="empleado3">
                     <h5 class="text-center">Luis Caro</h5>
                     <p class="text-center">Panadero Oficial</p>
+                    <a href="#" class="btn-2 modal_key">Ver Perfil</a>
                 </div>
             </div>
         </section>
@@ -102,14 +101,14 @@
             <div class="col-md-6">
               <h5 class="display-5">Enlaces</h5>
               <ul class="list-unstyled">
-                <!-- links añadidos con .map en js/footerlinks -->
+                <!-- links añadidos con .map en js/body.js -->
               </ul>
             </div>
           </div>
         </div>
         <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
       </footer>
-      <script src="../js/footerLinks.js"></script>
+      <script src="/js/body.js"></script>
       <script src="/js/carroDeCompras.js"></script>
 </body>
 </html>
