--- a/pages/empleados.html
+++ b/pages/empleados.html
@@ -92,23 +92,23 @@
     </main>
     <footer class="footer text-white">
         <div class="container-fluid">
-          <div class="row">
+            <div class="row">
             <div class="col-md-6">
-              <h5 class="display-5">Contacto</h5>
-              <p class="fs-4">Teléfono: +366 123 XXXX</p>
-              <p class="fs-4">Email: liansinchez00@gmail.com</p>
+                <h5 class="display-5">Contacto</h5>
+                <p class="fs-4">Teléfono: +366 123 XXXX</p>
+                <p class="fs-4">Email: liansinchez00@gmail.com</p>
             </div>
             <div class="col-md-6">
-              <h5 class="display-5">Enlaces</h5>
-              <ul class="list-unstyled">
+                <h5 class="display-5">Enlaces</h5>
+                <ul class="list-unstyled">
                 <!-- links añadidos con .map en js/body.js -->
-              </ul>
+                </ul>
             </div>
-          </div>
+            </div>
         </div>
         <p class="footer-line text-center fs-3">Lian Ivan Sinchez</p>
-      </footer>
-      <script src="/js/body.js"></script>
-      <script src="/js/carroDeCompras.js"></script>
+        </footer>
+        <script src="../js/body.js"></script>
+        <script src="../js/carroDeCompras.js"></script>
 </body>
 </html>
